--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -174,8 +174,8 @@ T \kern-.1667em \lower.7ex \hbox{E} \kern-.125emX}}
     to extract invariant conditions rooted in the model instead of simply using
     the metrics to evaluate the entity resolution result.
 
-    \section{Theoretical Background}\label{sec:Theoretical Background}
-    \subsection{Terminology pre-requisites}\label{sec:Terminology}
+    \section{Background}\label{sec:Theoretical Background}
+    \subsection{Terminology}\label{sec:Terminology}
     \input{terminology}
     
     \subsection{Formalizing Entity Resolution}\label{sec:Entity Resolution Formalization}
