--- a/articles/er-evaluation-models/terminology.tex
+++ b/articles/er-evaluation-models/terminology.tex
@@ -23,8 +23,8 @@ their number are inconsequential.
 In practical terms and as far as we are concerned it should suffice to know that
 entity resolution is a computer process that operates over data sources.
 
-In the process of entity resolution, we also use specific notions to refer to
-the various levels in which data is organised.
+Entity resolution requires at least a minimal conceptual structuring of data in
+attributes, references and traits.
 
 \begin{defn}
     An \textit{attribute} is information about an entity that has a certain
@@ -32,78 +32,49 @@ the various levels in which data is organised.
     interpretation.
 \end{defn}
 
-Attributes by themselves are not enough to describe an entity.
-For example, `red' fully describes an entity only if we are looking for
-colors.
-If we are looking for fruit, `red' is only one of several attributes that
-help describe fruit.
-We might be interested whether the fruit is `sour' or `sweet' as well as
-whether it is `small', `medium' or `large'.
+Attributes by themselves are not enough to describe any entity.
+For example, while `red' fully describes a color it does not fully describe a 
+fruit.
 
 \begin{defn}
     An \textit{entity reference} is a collection of attributes that refer
     to a real-world entity which is constructed by following an organizing
-    principle (or order) of the data source containing the attributes.
+    principle applied to the data source containing the attributes.
 \end{defn}
 
-The organizing principle of a data source is simply an order that
-facilitates processing information in that data source.
-A CSV file has the organizing principle that attributes are separated by
-commas.
-Relational databases typically organize data in tables, columns and rows.
-Other storage organizes data in structured, semistructured or even
-unstructured ways (such as text).
-As an example of unstructured organization, named entity disambiguation uses
-the same organizing principle as named entity recognition which is built around
-the notion of a `mention'.
-In the process of entity resolution, it loads \textit{references} to entities
-from a data source by taking advantage of the way that data source is
-organized~\cite{Ben2009Swoosh}.
+We refer to the way data is organized in a data source as the organizing
+principle of that data source.
+Although tempting, it should not be confused with the way data is structured in
+a data source.
+For example, most would agree that a CSV file is a semi-structured data source.
+The organizing principle that is interesting for entity resolution does not need
+to follow the structure of the CSV file.
+Indeed, if we are simply interested in named entity recognition and
+disambiguation we might only care about `mentions' and treat the file as if it
+were unstructured text.
+The process of entity resolution loads \textit{references} from a data source by
+taking advantage of the way that data source is organized~\cite{Ben2009Swoosh}.
 
-Even though they usually go hand in hand for well-structured data, let us not
-confuse the organisation principle of information with its structure, though.
-Multiple attributes of the same entity might be stored in the same column of the
-same database table row, for example.
-In this case, the entity reference will contain all attributes, not the whole
-value determined by the row and column.
+Entity reference extraction also varies a lot on the application context.
+For entity resolution tasks where geographic data is of particular importance,
+geolocation data will be extracted into entity references to the detriment of
+other types of information.
+Similarly, in tasks that aim to build people profiles, entity references will
+almost always favour extracting dates of birth and names over anything else.
 
-Besides not being bound to structure, entity reference extraction is also
-selective.
-For entity resolution tasks that value geolocation above other things, the
-extracted references might skip over data that is not about geography.
-Similarly, in tasks that identify people, entity references will be
-comprised from attributes that are useful in identifying a person or a
-company.
-
-These remarks speak to the extrinsic nature of the organizing principle of a
-data source relative to that data source.
-From the standpoint of entity resolution, the organization of information in a
-data source is determined by the purpose for conducting entity resolution.
-
-Finally we note that entity references contain attributes from a single data
-source.
-Our definition of entity references states this explicitly to avoid confusion
-regarding the provenance of entity references.
-
-Given that information organisation is driven by purpose, we move on to
-describing and defining notions related to meaning and purpose in the context of
-entity resolution.
-Let's suppose that we are gathering information about colors.
-A data source represents colors as `red', `green' or `blue'.
-Another one represents them as \texttt{0xCC0000}, \texttt{00CC00} or
-\texttt{0x0000CC}.
-The organizing principle instructs the entity resolution task to construct
-entity references with a single attribute.
-It does not provide any semantic interpretation rules for the data.
+In short, the organizing principle of a data source in the context of entity
+resolution is extrinsic to the data source and it is driven by the purpose of
+performing entity resolution.
 
 \begin{defn}
-    A \textit{trait} is a semantic rule that contributes to realizing the
-    organizing principle related to the purpose of a specific entity resolution
-    solution over an input data source.
+    A \textit{trait} is an algorithm that serves the purpose for which entity
+    resolution is performed and which is used for entity reference extraction
+    from a data source. The organizing principle of a data source is comprised
+    from all the traits needed to extract entity references from that data
+    source.
 \end{defn}
 
-Whenever entity resolution is performed, it is performed with purpose and
-agency.
+Entity resolution is performed with purpose and agency.
 There are specific objectives involved, such as medical diagnoses, plagiarism
 detection or illegal financial transaction monitoring.
 Different purposes bring into existence different key rules that guide the
@@ -111,80 +82,56 @@ interpretation of the available data, emphasizing certain aspects over others.
 These rules are typically implemented deliberately to serve the purpose for
 performing entity resolution.
 
-In our trivial example, entity resolution focuses exclusively on identifying
-colors in different data sources.
-To achieve this goal, the traits of the entity resolution task instance
-might be specified, trained or inferred from a knowledge base to recognize
-various representations of colours.
 While we might think of traits as being a part of a generic data extraction
 process such as scraping, traits in the sense described here are actually
 integral to the entity resolution process itself.
 In practice, generic data collection and extraction usually come into play when
 constructing the input data sources used in the entity resolution process.
-On the other hand, traits come into play within entity resolution, when
+On the other hand, traits come into play within entity resolution when
 constructing entity references.
 
 The most similar notion to that of a trait is the pattern recognition notion of
 a `feature':
 \textit{an individual measurable property or characteristic of a
 phenomenon}\cite{bishop2006pattern}.
-The mechanics of how traits and features function is near identical.
 The difference between a trait as defined here and a pattern recognition feature
 is a matter of perspective.
 Features are part of constructing a broader, objective perspective on
 information.
-Traits as they are defined here are concerned with mapping an objective
-information to the entity resolution context.
+Traits as they are defined here are concerned with mapping objective information
+to the entity resolution context.
 
-Pragmatically, traits can be viewed as computing functions that process
-information according to the subjective goal of the entity resolution task.
-In their simplest form, traits might be configuration parameters for an
-entity resolution system.
-But they can also be algorithms that are part of the a system's code.
-
-For example, a trait called `profitable' that is supposed to specify whether
-a company earns more than it spends is different from the typical physical
-representation of profit and loss as two separate decimal values present
-in information organized in some way or another.
-The way we would handle this discrepancy while extracting entity references
-is by having an algorithm that outputs a truth value when gains exceed
-spending.
-
+Pragmatically, traits can be viewed as computing functions that process data
+according to the subjective goal of the entity resolution task.
+Traits might be configuration parameters for an entity resolution system or they
+algorithms that are part of the a system's code.
+For example, a trait called `profitable' that applies to companies would entail
+writing an algorithm that outputs a truth value when gains exceed spending.
 Another example of a trait, is a configuration value that specifies the
 attributes that should be used when comparing two entity references.
-This trait might optimize certain attributes of the entity references for
-comparison.
 Some entity resolution algorithms allow configuring thresholds (such as the
 Jaccard threshold~\cite{jaccard1912}) to determine an upper limit to the number
 of attributes of entity references.
 
-To avoid confusing traits and attributes, it is easy to think about traits
-as not being a part of the data source, but rather as a part of a specific
-implementation of entity resolution.
-Entity resolution computer programs extract attributes that they assign to 
-entity references based on the specific traits built into each such program.
-
-Traits are a necessary abstraction that allows us to envision multiple entity
+In contrast to attributes, traits are not a part of the entity resolution input.
+Each specific implementation of entity resolution includes its own traits.
+Entity resolution computer programs extract attributes to construct entity
+references based on the programs' specific traits.
+They are a necessary abstraction that allows us to envision multiple entity
 resolution implementations over the same data source.
-These implementations would differ in their purpose.
-They are useful for constructing individual entity references.
 
-In the definition of entity resolution as the task of determining whether two
-information refer to the same real-world item, entity references are the two
-information.
-Next, we provide the notion that defines the representation of the real-world
-item throughout the entity resolution process.
+Entity references are the basic building block for performing entity resolution.
+While it is entirely possible to represent a real-world item with just one
+entity reference, that representation will likely be far from useful.
+Instead, real-world items are represented on the computer using \textit{entity
+profiles}.
 
 \begin{defn}
     The logical grouping of entity references that point to the same real-world
-    object according throughout entity resolution is known as the \textit{entity
-    profile} of the real-world object.
+    object throughout entity resolution is known as the \textit{entity profile}
+    of the real-world object.
 \end{defn}
 
-The entity profile must not be confused with the real-world object it describes.
-Entity profiles are representations of the real-world object that are available
-to the system performing entity resolution.
-
-By using the terms \textit{information source}, \textit{attribute},
+By using the terms \textit{data source}, \textit{attribute},
 \textit{trait}, \textit{entity reference} and \textit{entity profile} we can
 finally move on to define entity resolution formally.
