clarify entity resolution algorithm comments

--- a/articles/er-evaluation-models/convert.tex
+++ b/articles/er-evaluation-models/convert.tex
@@ -1,13 +1,12 @@
 
-As stated in Subection~\ref{subsec:Fellegi-Sunter Model}, one of the misgivings of the Fellegi-Sunter model is that
-it captures relatively well the matching aspect of entity resolution without
-doing as good a job for its clustering aspect.
-The algebraic model allows a more complete perspective over how entity
+As stated in Subection~\ref{subsec:Fellegi-Sunter Model}, one of the misgivings
+of the Fellegi-Sunter model is that it captures the matching aspect of entity
+resolution without its clustering aspect.
+The algebraic model allows a more detailed perspective over how entity
 resolution works by supporting measures of both matching (pairwise metrics)
 and clustering.
 One of the questions we asked initially is whether we could transition from
-one model to the other to enjoy the more complete overview offered by the
-algebraic model.
+one entity resolution outcome representation to the other.
 
 The answer to this question depends on whether we can automatically convert
 sequences of pairs of items to clusters.
