--- a/articles/er-evaluation-models/experiments.tex
+++ b/articles/er-evaluation-models/experiments.tex
@@ -54,25 +54,25 @@ outcome. All experiment datasets are available on GitHub\cite{expdata2023}.
     \centering
     \begin{tabular}{lllccc}
         \toprule
-        \multicolumn{3}{c}{\textbf{General Information}} & \multicolumn{2}{c}{\textbf{Size}} & \multirow{2}{*}{\textbf{Ground Truth Size}}\\
+        \multicolumn{3}{c}{\textbf{General Information}} & \multicolumn{2}{c}{\textbf{Size}} & \multirow{2}{*}{\textbf{Ground Truth Size}}                                                                                               \\
         \cline{0-4}
-        \textit{Domain} & \textit{Mapping Columns} & \textit{Sources} & \textit{Source 1} & \textit{Source 2} & \\
+        \textit{Domain}                                  & \textit{Mapping Columns}          & \textit{Sources}                            & \textit{Source 1}            & \textit{Source 2}                    &                       \\
         \toprule
-        \multirow{4}{*}{Bibliographic} & \tabitem~title & \multirow{4}{*}{DBLP-ACM} & \multirow{4}{*}{DBLP=2616} & \multirow{4}{*}{ACM=2294} & \multirow{4}{*}{2224} \\
-        & \tabitem~authors & & & &\\
-        & \tabitem~venue & & & &\\
-        & \tabitem~year & & & &\\
+        \multirow{4}{*}{Bibliographic}                   & \tabitem~title                    & \multirow{4}{*}{DBLP-ACM}                   & \multirow{4}{*}{DBLP=2616}   & \multirow{4}{*}{ACM=2294}            & \multirow{4}{*}{2224} \\
+                                                         & \tabitem~authors                  &                                             &                              &                                      &                       \\
+                                                         & \tabitem~venue                    &                                             &                              &                                      &                       \\
+                                                         & \tabitem~year                     &                                             &                              &                                      &                       \\
         \midrule
-        \multirow{4}{*}{E-commerce} & \tabitem~product name & \multirow{2}{*}{Abt-Buy} & \multirow{2}{*}{Abt=1081} & \multirow{2}{*}{Buy=1092} & \multirow{2}{*}{1097} \\
-        & \tabitem~description & & & &\\
+        \multirow{4}{*}{E-commerce}                      & \tabitem~product name             & \multirow{2}{*}{Abt-Buy}                    & \multirow{2}{*}{Abt=1081}    & \multirow{2}{*}{Buy=1092}            & \multirow{2}{*}{1097} \\
+                                                         & \tabitem~description              &                                             &                              &                                      &                       \\
         \cline{3-6}
-        & \tabitem~manufacturer & \multirow{2}{*}{Amazon-GoogleProducts} & \multirow{2}{*}{Amazon=1363} & \multirow{2}{*}{GoogleProducts=3226} & \multirow{2}{*}{1300} \\
-        & \tabitem~price & & & &\\
+                                                         & \tabitem~manufacturer             & \multirow{2}{*}{Amazon-GoogleProducts}      & \multirow{2}{*}{Amazon=1363} & \multirow{2}{*}{GoogleProducts=3226} & \multirow{2}{*}{1300} \\
+                                                         & \tabitem~price                    &                                             &                              &                                      &                       \\
         \midrule
-        \multirow{4}{*}{Control} & \tabitem~product name & \multirow{4}{*}{mini-Buy} & \multirow{4}{*}{DG1=10} & \multirow{4}{*}{DG2=10} & \multirow{4}{*}{10} \\
-        & \tabitem~description & & & &\\
-        & \tabitem~manufacturer & & & &\\
-        & \tabitem~price & & & &\\
+        \multirow{4}{*}{Control}                         & \tabitem~product name             & \multirow{4}{*}{mini-Buy}                   & \multirow{4}{*}{DG1=10}      & \multirow{4}{*}{DG2=10}              & \multirow{4}{*}{10}   \\
+                                                         & \tabitem~description              &                                             &                              &                                      &                       \\
+                                                         & \tabitem~manufacturer             &                                             &                              &                                      &                       \\
+                                                         & \tabitem~price                    &                                             &                              &                                      &                       \\
         \bottomrule
     \end{tabular}
     \caption{Experiment Data Characteristics}\label{tab:dsattrs}
@@ -104,8 +104,8 @@ The data generation procedure divides the ten-item subset into two distinct
 tables:
 
 \begin{enumerate}[label=\textbullet,leftmargin=1cm]
-\item DG1, with columns: \texttt{`name', `manufacturer', `price', `id'}
-\item DG2, with columns: \texttt{`description', `name', `id'}
+    \item DG1, with columns: \texttt{`name', `manufacturer', `price', `id'}
+    \item DG2, with columns: \texttt{`description', `name', `id'}
 \end{enumerate}
 
 These tables serve as the foundational input for our experimental analysis.
@@ -124,9 +124,9 @@ records indicative of our data generation procedure.
     \centering
     \begin{tabular}{lllll}
         \toprule
-        id&name&description&manufacturer&price\\
+        id        & name         & description & manufacturer & price    \\
         \midrule
-        205554724&Seiko SXDA04& & &\$138.00\\
+        205554724 & Seiko SXDA04 &             &              & \$138.00 \\
         \bottomrule
     \end{tabular}
     \caption{Example `Buy' record}\label{tab:buy-record}
@@ -137,9 +137,9 @@ records indicative of our data generation procedure.
     \centering
     \begin{tabular}{llll}
         \toprule
-        name & manufacturer & price & id \\
+        name         & manufacturer & price    & id        \\
         \midrule
-        Seiko SXDA04 & & \$138.00 & 205554724 \\
+        Seiko SXDA04 &              & \$138.00 & 205554724 \\
         \bottomrule
     \end{tabular}
     \caption{Example `DG1' record}\label{tab:dg1-record}
@@ -150,9 +150,9 @@ records indicative of our data generation procedure.
     \centering
     \begin{tabular}[b]{lll}
         \toprule
-        description&name&id \\
+        description & name         & id        \\
         \midrule
-        &Seiko SXDA04&205554724 \\
+                    & Seiko SXDA04 & 205554724 \\
         \bottomrule
     \end{tabular}
     \caption{Example `DG2' record}\label{tab:dg2-record}
@@ -179,22 +179,30 @@ We employ this process to effectively ensure sequence neutrality.
 
 \subsection{Entity Resolution Algorithm}\label{subsec:Entity Resolution Algorithm}
 
-In searching for invariant conditions that hold true regardless of the data set
-that we use for experimentation, it is tempting to say that the choice of entity
-resolution algorithm is non-consequential.
-Given that this experiment is our first foray into the matter, it seems wise not
-to give in to temptation.
-There are two limitations that we find important in choosing an appropriate
-entity resolution algorithm.
+We can more easily exemplify conditions that are invariant along with the kind
+and size of the input data by showcasing how to calibrate an entity resolution
+algorithm for obtaining the best possible outcome.
+The evaluated algorithm is not important in practice.
+In fact, the calibration process described here would work for any other entity
+resolution algorithm.
+However, writing a paper presents us with some limiting factors that influence
+our choice.
 
 Firstly, the algorithm should perform reasonably well without losing the ability
 to easily explain its outcome.
-In this context we are thinking primarily about quantitative performance marks
-such as resource consumption or time spent.
+Easy explainability of results allows us to discern the aspects that are not
+influenced by the algorithm's configuration and (because of that) might pertain
+to the entity resolution model itself.
+This criterion does not favour deep learning algorithms, for example, because
+these algorithms do not lend themselves to easy explanation of the process by
+which they produce the outcome.
 
-Secondly, we want to choose an algorithm that has very few configurations so
-that its qualitative performance is easy to plot over a relatively large  number
-of configurations.
+Secondly, we want to choose an algorithm that has very few configurations.
+Our intention is to plot result quality measurements relative to configuration
+values.
+Having fewer configurations makes plotting results over a relatively large
+number of configurations easier, enabling us to run more experiments over more
+datasets of various sizes.
 
 The \texttt{ppjoin}\cite{ppjoin} entity matching algorithm meets these criteria.
 PPJoin stands for Position Prefix Join.
@@ -207,6 +215,7 @@ prefixes, thus increasing the chances of a match.
 A higher threshold should match fewer items, but with less chance for error.
 Throughout the experiment, the Jaccard threshold will be denoted with \textit{t}.
 
+
 Our experiment consists of the following steps:
 
 \begin{itemize}
@@ -214,8 +223,8 @@ Our experiment consists of the following steps:
     \item take 100 entity matching passes through the input data with
           Jaccard thresholds ranging from 0 to and including 0.99 in steps of
           0.01, storing the results for each step;
-    \item compute the statistical and algebraic similarity metrics for each
-          of the stored results.
+    \item compute the probabilistic and algebraic quality metrics for each of
+          the stored results.
 \end{itemize}
 
 Experiments that use multiple threshold values to determine whether the data
@@ -224,16 +233,18 @@ past~\cite{draisbach2013choosing}.
 Those experiments differ from our own in significant ways.
 
 First, the thresholds were used for tuning the similarity function and not to
-influence the entity resolution model.
+influence the entity resolution model itself.
 While tuning the similarity function acts as an interference at the attribute
 level, the Jaccard threshold is used by the \texttt{ppjoin} algorithm
 to manipulate the number of attributes that participate in a comparison, too.
+Therefore, by manipulating the Jaccard threshold we change the entity reference
+extraction traits effectively changing the overall match probability.
 
 Second, these previous experiments were only concerned with evaluating how the
 F-measure varies according to data set size.
 In our experiments we attempt to find invariant conditions using multiple
 quality metrics.
- 
+
 Lastly, we do not focus our experiments on input size except for one significant
 way.
 The conclusion of the referenced experiments is that the size of the data set
@@ -245,12 +256,12 @@ Their size is two orders of magnitude above the size of our control data set.
 We look for the conditions that occur on the control set and in all benchmark
 data sets.
 
-The \texttt{ppjoin} algorithm treats entity resolution as a matching problem.
-Consequently, Fellegi-Sunter is the natural entity resolution model for
-understanding the quality of its results.
+The \texttt{ppjoin} algorithm is an entity matching algorithm.
+Consequently, the natural way to understand its results is probabilistic in
+nature.
 In order to evaluate the quality of the algorithm under the algebraic model, we
-have to convert a list of matches (the data structure output by the \texttt{ppjoin}
-algorithm) to a partition over a set.
+have to convert a list of matches (the data structure output by the
+\texttt{ppjoin} algorithm) to a partition over a set.
 
 For our own generated data we are able to generate the ground truth partition
 for the algebraic model based on the input data.
@@ -270,8 +281,8 @@ Note that there are duplicate CSV records that only differ on the `id' column.
 
 Intuition tells us that for values of the Jaccard similarity threshold
 \textit{t}\footnote[1]{the Jaccard similarity coefficient is used to determine
-the length of the prefix which should be used to compare two entity references
-to determine whether they refer to the same entity or not} that are either too
+    the length of the prefix which should be used to compare two entity references
+    to determine whether they refer to the same entity or not} that are either too
 low or too high we should have lower precision.
 For higher thresholds we should also have lower recall values, whereas for
 lower values the recall should be higher.
@@ -401,10 +412,10 @@ the result data to be partitioned and singleton clusters play an ever more
 important part in the computed recall score as their number increases.
 
 This situation leads to presenting our \textbf{first invariant condition
-candidate}.
+    candidate}.
 \textbf{Probabilistic recall seems to fail to adequately assess entity
-resolution quality when the volume of data returned at the end of the entity
-resolution process vastly exceeds the size of the ground truth}.
+    resolution quality when the volume of data returned at the end of the entity
+    resolution process vastly exceeds the size of the ground truth}.
 Despite encompassing all true positives, we are left with a myriad of false
 positives to weed out.
 This is a real problem for systems that value a result that is both accurate and
@@ -460,9 +471,9 @@ As the number of singletons increases when we get fewer and fewer true positives
 in the matching phase of the entity resolution process, the cluster precision
 naturally drops.
 In fact, we might say that \textbf{cluster precision behaves as a complement to the
-other precision metrics, having higher values when the other precision metrics
-have low values and lower values when the other precision metrics have high
-values}.
+    other precision metrics, having higher values when the other precision metrics
+    have low values and lower values when the other precision metrics have high
+    values}.
 This relationship between the three precision metrics looks like a good
 candidate for our \textbf{second invariant condition}.
 
@@ -509,9 +520,9 @@ between the Talburt-Wang Index, the ARI and cluster metrics.
 All of these metrics indicate the same neighbourhoods for favourable
 configurations of the entity resolution algorithm.
 The conjecture here is that \textbf{the best generic configuration balanced
-between precision and recall of an entity resolution algorithm will be found
-within the agreement area between ARI on one side and TWI or cluster metrics on
-the other}.
+    between precision and recall of an entity resolution algorithm will be found
+    within the agreement area between ARI on one side and TWI or cluster metrics on
+    the other}.
 The configuration obtained this way will be very good regardless of conditions
 related to the data.
 In our specific case, this means that we should expect to get the best results
