--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -74,33 +74,63 @@ T \kern-.1667em \lower.7ex \hbox{E} \kern-.125emX}}
     sources~\cite{Qia17}.
     However, we share the opinion that identifying and linking data constitutes
     a more specialized process~\cite{Tal11}.
-    Besides leaving discussions concerning identity out of scope, we will not
-    cover entity resolution classification on various well established criteria
-    such as the number of sources and the technological choice underlying the
-    solution.
     
-    Because of its fundamental nature, entity resolution goes by many names:
-    record linkage, data de-duplication, merge-purge, named entity recognition
-    and disambiguation (or NERD), entity alignment or entity matching~\cite{Tal11,fever2009,alhelbawy2014}.
-    The number of names is matched by the number of practical applications for
-    entity resolution, ranging from linking medical records to assisting in
-    medical diagnostics, to translation, to doing background checks for
-    financial crime or to identifying plagiarism.
-    Combining information from different media (sound, images, motion, smell,
-    etc.) can also be regarded as a form of entity resolution when the purpose
-    is to gather more information about the same real-world object.
-    In this context, evaluating the quality of entity resolution using some well
-    established criteria that don't vary based on application domain or solution
-    seems interesting.
+    Entity resolution has been classified according to the number of sources and
+    the technological choice underlying the solution.
+    Whether entity resolution solutions are implemented using machine learning
+    or are rule based is not of particular interest in this paper.
+    The more interesting classification in our opinion concerns whether entity
+    resolution algorithms are matching algorithms or clustering ones.
+    The family which an entity resolution solution belongs to is interesting on
+    multiple levels.
+    
+    Firstly, there are theoretical models that deal with entity matching and
+    there are clustering models.
+    Matching is more related to information retrieval whereas clustering is a
+    problem domain with many ramifications including, but not limited to,
+    knowledge management, complex networks or computer vision.
+    So finding a terminology that applies to both potentially opens up a bridge
+    between entity resolution and findings in those fields.
+    This is especially true because of entity resolution's fundamental nature:
+    there are very few things more fundamental to humans than identifying real
+    world objects.
 
-    With the current paper, our goal is to introspect how entity resolution
-    models influence our perception over entity resolution results.
-    The discussion is around judging the suitability of an entity resolution
-    solution through the lens of two different models.
-    We are interested in linking entity resolution quality metrics to models
-    in particular because this shows us how we might tune an entity resolution
-    solution in a way that does not vary with the application domain or choice
-    of algorithmic approach (rule-based, machine learning and so on).
+    Secondly, theoretical models are merely ways of describing something with
+    some theoretical tools (usually mathematical in nature):an idea, an
+    occurence or an entire phenomenon.
+    They influence our perception over that which they describe because of how
+    they describe it.
+    Entity resolution models are no different.
+    They can describe entity resolution as a matching problem confining us to
+    think about what is happening in the entity resolution process as a matching
+    operation.
+    Or they can describe entity resolution as a clustering problem only allowing
+    interpretations that focus on the composition and size of clusters.
+    
+    In this paper we want to discuss broadly the suitability of an entity
+    resolution solution through the lens of two different models.
+    We chose one model from the matching family and another from the clustering
+    family of entity resolution models for this discussion.
+    In order for the discussion to take place, we require some common terms that
+    describe things which are specific to entity resolution and how they apply\
+    to the broader notions of matching and clustering.
+    That entails introducing a framework where we define these notions.
+    This framework also helps highlighting the differences between matching and
+    clustering models of entity resolution.
+
+    We are also interested in linking entity resolution quality metrics to
+    model families.
+    This has two benefits in our opinion.
+    The data structures used in the matching view over entity resolution differ
+    from the ones used in a clustering context.
+    This fact reveals an advantage when comparing entity resolution models,
+    making it much easier to judge the usefulness of a given model for one
+    application or another.
+    Being able to compare models like this also facilitates finding conditions
+    that are invariant with respect to the data or the purpose of the entity
+    resolution task.
+    Such conditions can then be used to easily optimize rule-based or machine
+    learning entity resolution systems alike.
     
     We begin with a preliminary description focused on further detailing the
     goals of this paper.
