--- a/articles/er-evaluation-models/terminology.tex
+++ b/articles/er-evaluation-models/terminology.tex
@@ -68,10 +68,9 @@ performing entity resolution.
 
 \begin{defn}
     A \textit{trait} is an algorithm that serves the purpose for which entity
-    resolution is performed and which is used for entity reference extraction
-    from a data source. The organizing principle of a data source is comprised
-    from all the traits needed to extract entity references from that data
-    source.
+    resolution is performed and it is used for entity reference extraction from
+    a data source. The organizing principle of a data source is comprised from
+    all the traits needed to extract entity references from that data source.
 \end{defn}
 
 Entity resolution is performed with purpose and agency.
